# parley-service-jpa/src/main/java/org/sidequest/parley/entity/UserEntity.java
@@ -6,8 +6,13 @@ import lombok.Setter;
 import org.springframework.data.annotation.CreatedDate;
 import org.springframework.data.annotation.LastModifiedDate;
 import org.springframework.format.annotation.DateTimeFormat;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.userdetails.UserDetails;
 
 import java.time.OffsetDateTime;
+import java.util.Collection;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
 
@@ -15,7 +20,7 @@ import java.util.Set;
 @Getter
 @Setter
 @Table(name = "chatusers")
-public class UserEntity {
+public class UserEntity implements UserDetails {
 
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
@@ -31,6 +36,16 @@ public class UserEntity {
 
     @Column(name = "timezone", columnDefinition = "VARCHAR(255)")
     private String timezone;
+
+    @Column(name = "email", unique = true)
+    private String email;
+
+    @Column(name = "passwordresettoken")
+    private String passwordResetToken;
+
+    @Column(name = "passwordresettokenexpiration")
+    private OffsetDateTime passwordResetTokenExpiration;
+
 
     @CreatedDate
     @Column(name = "created", nullable = false, updatable = false)
@@ -65,6 +80,41 @@ public class UserEntity {
     @PrePersist
     protected void onCreate() {
         createdAt = OffsetDateTime.now();
+    }
+
+    @Override
+    public Collection<? extends GrantedAuthority> getAuthorities() {
+        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER"));
+    }
+
+    @Override
+    public String getPassword() {
+        return magic; // using the 'magic' field as password
+    }
+
+    @Override
+    public String getUsername() {
+        return name;
+    }
+
+    @Override
+    public boolean isAccountNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isAccountNonLocked() {
+        return true;
+    }
+
+    @Override
+    public boolean isCredentialsNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isEnabled() {
+        return true;
     }
 
 }
